<resources>
    <string name="app_name">Phòng Đào Tạo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="edit_mssv">Click để đăng xuất</string>
    <string name="click_to_exit">Nhấn lần nữa để thoát ứng dụng</string>

    <string name="app_title">Phòng Đào Tạo NTT</string>
    <string name="login">Đăng Nhập</string>
    <string name="msv">Mã sinh viên</string>
    <string name="notice">** CHÚ Ý: Ứng dụng này thực chất chỉ là một trình duyệt web (như Google Chrome) nhưng thêm một vài lối tắt để có thể thao tác nhanh các chức năng trên web Phòng Đào Tạo của trường mà không cần phải đăng nhập.</string>

    <string name="chuc_nang_chinh">Chức năng chính</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="lich_hoc_theo_tuan">Lịch học theo tuần</string>
    <string name="lich_hoc">Lịch học</string>
    <string name="lich_thi">Lịch thi</string>
    <string name="ket_qua_hoc_tap">Kết quả học tập</string>
    <string name="diem_danh">Điểm danh</string>
    <string name="cong_no">Công nợ</string>

    <string name="thong_tin">Thông tin hữu ích</string>
    <string name="chuan_dau_ra">Chuẩn đầu ra</string>
    <string name="quy_dinh_phan_tiet_hoc">Quy định phân tiết học</string>
    <string name="vi_tri">Vị trí phòng học</string>
    <string name="dong_hoc_phi">Hướng dẫn đóng học phí</string>

    <string name="chuc_nang_khac">Chức năng khác</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="gioi_thieu">Giới thiệu</string>

    <string name="thong_bao">Thông báo</string>
    <string name="luu_y">Lưu ý</string>
    <string name="file_exist">Có vẻ bạn đã tải file này trước đó rồi, bạn có muốn đọc ngay bây giờ không?</string>
    <string name="luu_y_lich_thi">Hãy chọn ĐỢT rồi nhấn XEM LỊCH THI.\n\nNếu không sẽ không hiện lịch thi!</string>
    <string name="luu_y_diem_danh">Hãy chọn ĐỢT rồi nhấn LỌC.\n\nNếu không sẽ không hiện thông tin điểm danh như mong muốn!</string>
    <string name="luu_y_lich_hoc">Hãy chọn ĐỢT rồi nhấn XEM LỊCH HỌC.\n\nNếu không sẽ không hiện thông tin lịch học như mong muốn!</string>
    <string name="download_completed">Đã tải file về máy ở thư mục Download, bạn có muốn mở file ngay bây giờ không?</string>
    <string name="download_completed_with_path">File đã được tải ở đường dẫn \n\n%s</string>
    <string name="no_internet">Không thể kết nối Internet, hãy thử lại sau!</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>


    <string name="title_thong_bao_update">Phiên bản 7.0</string>
    <string name="thong_bao_update">Chào bạn, mình là Hải - người phát triển ứng dụng này ^^\n\nCảm ơn bạn đã luôn đồng hành cùng ứng dụng Phòng Đào Tạo NTT!\n\nMình muốn thông báo đến bạn là bắt đầu từ phiên bản này, mình sẽ thêm một banner quảng cáo nhỏ ở cuối màn hình. Lý do là mình muốn tìm thêm động lực để phát triển ứng dụng tiếp cũng như thông qua đó kiếm thêm chút thu nhập để uống cafe :D Hy vọng nó không làm phiền bạn quá nhiều và vẫn mang lại trải nghiệm tốt cho bạn khi sử dụng.\n\nNếu cảm thấy ứng dụng hữu ích, bạn có thể click vào banner quảng cáo để ủng hộ giúp mình hoặc đánh giá 5 sao cho Phòng Đào Tạo NTT trên Google Play nha!\n\nNếu bạn có góp ý cũng như gặp lỗi trong quá trình sử dụng, đừng ngần ngại liên hệ với mình qua email hhhai0304@gmail.com\n\nCảm ơn bạn và chúc bạn luôn đạt thành tích cao trong học tập cũng như trong công việc :3</string>
    <string name="seen">Đã xem</string>

    <string name="login_student_id_hint">MÃ SINH VIÊN</string>
    <string name="login_dialog_title">Chỉ một bước nữa thôi &#x1F606;</string>
    <string name="login_dialog_message">Hãy click vào nút XEM ĐIỂM để hoàn tất bước đăng nhập nhé!</string>
    <string name="login_incorrect_student_id">Mã sinh viên phải là số và có đúng 10 ký tự &#x1F605;</string>
    <string name="login_successful">Đăng nhập thành công &#x1F389;</string>
</resources>